fixed spacing of heaing

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h1
 	font-variant: normal;
 	font-weight: 500;
 	line-height: 26px;
-  letter-spacing: 2px;
+  letter-spacing: 6px;
 }
 
 h3
